Spacing issues and copy

--- a/hom.css
+++ b/hom.css
@@ -123,20 +123,22 @@ a:active {
 }
 
 .video-responsive{
-    overflow:hidden;
-    padding-bottom:56.25%;
     position:relative;
-    height:0;
-		z-index:0;
+    width:100%;
+    aspect-ratio: 16 / 9;
+    overflow:hidden;
+}
+
+.video-responsive.is-4-3{
+    aspect-ratio: 4 / 3;
 }
 
 .video-responsive iframe{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
     position:absolute;
-		z-index:-1;
+    inset:0;
+    width:100%;
+    height:100%;
+    border:0;
 }
 
 img {
@@ -176,19 +178,26 @@ iframe[src*="bandcamp.com"] {
   }
   .site-wrapper > iframe,
   .site-wrapper > a,
-  .site-wrapper > .video-responsive {
+  .site-wrapper > .video-responsive,
+  .site-wrapper main > iframe,
+  .site-wrapper main > a,
+  .site-wrapper main > .video-responsive,
+  .flex-container .video-responsive {
     display: block;
     width: 100% !important;
     margin-bottom: 16px;
   }
-  .site-wrapper > .flex-container {
+  .site-wrapper > .flex-container,
+  .site-wrapper main > .flex-container {
     margin-bottom: 16px;
   }
-  .site-wrapper > a > img {
+  .site-wrapper > a > img,
+  .site-wrapper main > a > img {
     width: 100% !important;
     display: block;
   }
-  .site-wrapper > br {
+  .site-wrapper > br,
+  .site-wrapper main > br {
     display: none;
   }
 }
